# readerbee-tts

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
kokoro_tts/: web.py
kokoro_tts/static/: index.html
